src/pages/InGame.css
.in-game-page {
    margin-top: -5rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.zähler {
    background: var(--primary-bg);
    backdrop-filter: blur( 5px );
    -webkit-backdrop-filter: blur( 5px );
    border-radius: 25px;
    border: 2px solid var(--primary-border);
    padding: 20px;
    width: 200px;
    margin: 0 0 25px 0;
    box-sizing: border-box;
    height: 75px;
    display:flex;
    align-items: center;
    justify-content: center;
    cursor: default;
}

.zähler h2 {
    font-size: 40px;
    color: #929293;
}


.frage {
    background: var(--primary-bg);
    backdrop-filter: blur( 5px );
    -webkit-backdrop-filter: blur( 5px );
    border-radius: 25px;
    border: 2px solid var(--primary-border);
    padding: 20px;
    width: 1600px;
    margin: 0 0 25px 0;
    box-sizing: border-box;
    height: 140px;
    display:flex;
    align-items: center;
    justify-content: center;
    cursor: default;
    text-align: center;
}

.frage h2 {
    font-size: 45px;
    color: #929293;
}

.aw {
    background:  rgba(255, 255, 255, 0.17);
    border: 2px solid rgba(255, 255, 255, 0.5);
    border-radius: 25px;
    backdrop-filter: blur( 5px );
    -webkit-backdrop-filter: blur( 5px );
    width: 1600px;
    height: 100px;
    margin: 10px 0 10px 0;
    transition: all 200ms;
    cursor: pointer;
    color: #929293;
    display:flex;
    align-items: center;
    justify-content: center;
}

.aw h2 {
    font-size: 40px;
}


.aw:hover {
    transform: scale(102%);
    filter: brightness(170%);
}

.aw:active {
    transform: scale(97%);
}

.progress-bar {
    background-color: rgba(255, 255, 255, 0.0);
    width: 1600px;
    height: 30px;
    border: 2px solid #B1B1B1;
    border-radius: 12px;
    position: absolute;
    bottom: 30px;
}

.progress-inner {
    position: relative;
    width: 0;
    background-color: rgba(255, 255, 255, 0.25);
    height: 30px;
    border-radius: 12px;
    transition: 2s all linear;
}

.progress-zero{
    width: 100%;
}

.aw-correct {
    background: rgba(26, 251, 6, 0.22);
    border: 2px solid rgba(26, 251, 6, 0.5);
    border-radius: 25px;
    backdrop-filter: blur( 5px );
    -webkit-backdrop-filter: blur( 5px );
    width: 1600px;
    height: 100px;
    margin: 15px 0 15px 0;
    transition: all 200ms;
    cursor: pointer;
    color: #929293;
    display:flex;
    align-items: center;
    justify-content: center;
}

.aw-wrong {
    background: rgba(255, 0, 0, 0.22);
    border: 2px solid rgba(255, 0, 0, 0.22);
    border-radius: 25px;
    backdrop-filter: blur( 5px );
    -webkit-backdrop-filter: blur( 5px );
    width: 1600px;
    height: 100px;
    margin: 15px 0 15px 0;
    transition: all 200ms;
    cursor: pointer;
    color: #929293;
    display:flex;
    align-items: center;
    justify-content: center;
}

.btn-disabled {
    cursor: inherit;
}

.btn-disabled:hover {
    transform: none;
    filter: none;
}

.text-italic {
    font-style: italic;
    font-weight: 500;
}


@media screen and (max-width: 460px){

    .in-game-page {
        margin-top: -5rem;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }

    .zähler {
        background: var(--primary-bg);
        backdrop-filter: blur( 5px );
        -webkit-backdrop-filter: blur( 5px );
        border-radius: 12px;
        border: 1.5px solid var(--primary-border);
        padding: 20px;
        width: 80px;
        margin: 0 0 25px 0;
        box-sizing: border-box;
        height: 30px;
        display:flex;
        align-items: center;
        justify-content: center;
        cursor: default;
    }

    .zähler h2 {
        font-size: 15px;
        color: #929293;
    }


    .frage {
        background: var(--primary-bg);
        backdrop-filter: blur( 5px );
        -webkit-backdrop-filter: blur( 5px );
        border-radius: 15px;
        border: 1.5px solid var(--primary-border);
        padding: 20px;
        width: 350px;
        margin: 0 0 12.5px 0;
        box-sizing: border-box;
        height: 100px;
        display:flex;
        align-items: center;
        justify-content: center;
        cursor: default;
        text-align: center;
    }

    .frage h2 {
        font-size: 15px;
        color: #929293;
    }

    .aw {
        border-width: 1.2px;
        border-radius: 15px;
        backdrop-filter: blur( 5px );
        -webkit-backdrop-filter: blur( 5px );
        width: 350px;
        height: 60px;
        margin: 7.5px 0 7.5px 0;
        transition: all 200ms;
        cursor: pointer;
        color: #929293;
        display:flex;
        align-items: center;
        justify-content: center;
    }

    .aw h2 {
        font-size: 15px;
    }


    .aw:hover {
        transform: none;
        filter: none;
    }

    .aw:active {
        transform: scale(97%);
        filter: brightness(170%);
    }

    .progress-bar {
        width: 350px;
        height: 20px;
    }

    .progress-inner {
        height: 20px;
    }

}

